--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Damir's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?embedded=true&url=https%3A%2F%2Fraw.githubusercontent.com%2Fddzeko%2Fresume%2Fmaster%2FCV%202024%20Damir%20Dzeko%20Antic.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?embedded=true&url=https%3A%2F%2Fraw.githubusercontent.com%2Fddzeko%2Fresume%2F791709464cba1286d19569a4042e8d7734f12ef4%2FCV%25202024%2520Damir%2520Dzeko%2520Antic.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
